<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.vehicleForm.VehicleFormFragment">

    <EditText
        android:id="@+id/brand_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:ems="10"
        android:hint="@string/brand"
        android:inputType="textPersonName"
        android:minHeight="48dp"/>

    <EditText
        android:id="@+id/model_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:ems="10"
        android:hint="@string/model"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/plate_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="false"
        android:ems="10"
        android:hint="@string/plate_number"
        android:inputType="textPersonName"
        tools:ignore="TextFields"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/add_vehicle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>